syntax = "proto3";

package host;

// gogo plugin toggles
option (gogoproto.gogoproto_import) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
// golang option
option go_package = "hostpb";
// java options
option java_multiple_files = true;
option java_outer_classname = "HostProto";
option java_package = "io.btfs.host";

import "github.com/tron-us/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message HostShardStatus {
  string status = 1;
  string message = 2;
  google.protobuf.Timestamp last_updated = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message HostShardSignedContracts {
  bytes signed_escrow_contract = 1;
  bytes signed_guard_contract = 2;
}
